# PraktickaProgramovani

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
DesktopApp/: Application.cpp  CMakeLists.txt  Window.cpp  Window.h
QR/: CMakeLists.txt  QR.cpp
SitMLM/: Application.cpp  Application.h  CMakeLists.txt  Window.cpp  Window.h
